# FikirFix

./: .gitignore  README.md  main.py  pyproject.toml  tests.py
.github/workflows/: ci.yml
fikirfix/: __init__.py  cli.py
functions/: audit.py  config.py  get_files_info.py  run_python.py
tests/: conftest.py  test_agent_integration_stub.py  test_calculator.py  test_cli.py  test_cli_forward_flags.py  test_dry_run_write.py  test_functions_get_files.py
