[project]
name = "fikirfix"
version = "0.1.0"
description = "Agentic CLI for repository-level LLM tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai==1.12.1",
    "python-dotenv==1.1.0",
    "typer[all]>=0.9.0",
]

[project.scripts]
fikirfix = "fikirfix.cli:main"
